removed margin from p element to prevent button and text overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,6 @@ nav {
 }
 nav h1 {
   margin: auto;
-  /*add padding*/
 }
 nav h1 a {
   color: #fff;
@@ -70,7 +69,6 @@ nav h1 a {
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
-  /*add padding*/
 }
 #breadcrumb {
     padding: 10px 40px 16px;
@@ -160,14 +158,14 @@ nav h1 a {
   min-height: 380px;
   padding: 0 25px 25px;
   text-align: left;
-  max-width: 25%;
+  max-width: 300px;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: auto;
+  min-height: 250px;
   min-width: 100%;
 }
 #restaurants-list li h1 {
@@ -181,7 +179,6 @@ nav h1 a {
   text-transform: uppercase;
 }
 #restaurants-list p {
-  margin: 0;
   font-size: 11pt;
 }
 #restaurants-list li a {
@@ -190,7 +187,7 @@ nav h1 a {
   color: #fff;
   display: inline;
   font-size: 10pt;
-  margin: 15px 0 0;
+  margin: 15px 0 15px;
   padding: 8px 30px 10px;
   text-align: center;
   text-decoration: none;
